<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.alexlondon07.clase1_diplomado_android.ProfileActivity"
    android:orientation="vertical"
    android:layout_margin="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0">

                <ImageView
                    android:id="@+id/imageProfile"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    app:srcCompat="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/txtUsernameProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_below="@id/imageProfile"
                    android:layout_centerHorizontal="true"
                    />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">




            <TextView
                android:id="@+id/activity_profile_textview_like"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_thumb_up_black_24dp"
                android:text="@string/ico_like"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_profile_textview_followers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_group_black_24dp"
                android:text="@string/ico_followers"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_profile_textview_following"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_perm_identity_black_24dp"
                android:text="@string/ico_following"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.9"
            android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/activity_profile_textview_notificarme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_notificarme"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_weight="0.9"
                    />

                <CheckBox
                    android:id="@+id/activity_profile_chk_notificarme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/activity2_textview_send"
                    android:layout_alignParentEnd="true"
                    android:layout_weight="0.1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.9">

                <TextView
                    android:id="@+id/activity_profile_textview_syn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_sync"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_weight="0.9"/>

                <Spinner
                    android:id="@+id/activiy_profile_spinner_syn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textAlignment="center"
                    android:layout_weight="0.1">

                </Spinner>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_profile_btn_logout"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@android:color/white"/>
        </RelativeLayout>


</LinearLayout>
