<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.alexlondon07.clase1_diplomado_android.MainActivity"
    android:layout_margin="20dp"
    android:orientation="vertical"
    >


    <Button
        android:id="@+id/activity_main_button_one"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_one"
        android:textAllCaps="false"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="30dp"
        />
    
    <Button
        android:id="@+id/activity_main_button_two"
        android:onClick="onClickAnimals"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:text="@string/button_two"
        android:textColor="@color/white"
        android:background="@drawable/main_button"
        />

    <android.support.design.widget.FloatingActionButton
        android:src="@drawable/ic_folder_special_black_24dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/activity_main_button_profile"
        android:onClick="onClickProfile"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:text="@string/button_profile"
        android:textColor="@color/white"
        android:background="@drawable/main_button"
        />

</LinearLayout>

