<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.alexlondon07.clase1_diplomado_android.Main2Activity"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="20dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <TextView
            android:id="@+id/activity2_textview_name"
            android:text="@string/textview_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/activity2_edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:inputType="textPersonName"
            android:layout_below="@+id/activity2_textview_name"
            />
        <TextView
            android:id="@+id/activity2_textview_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity2_edittext_name"
            android:drawableLeft="@drawable/ic_send_black_24dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:text="@string/text_send"
            />

        <CheckBox
            android:id="@+id/activity2_chk1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/activity2_textview_send"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity2_textview_name2"
            android:text="@string/textview_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/activity2_edittext_name2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity2_textview_send2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:drawableLeft="@drawable/ic_send_black_24dp"
                android:text="@string/text_send"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/activity2_chk2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
